syntax = "proto3";

package pkg;

option go_package = ".;pb";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest{
 int64 user_id = 1;
 int64 item_id = 2;
}

message CreateOrderResponse{}